--- a/package.json
+++ b/package.json
@@ -18,14 +18,9 @@
     "db:drop": "drizzle-kit drop --config=drizzle.config.ts",
     "codegen": "graphql-codegen",
     "codegen:fetch": "node --no-warnings scripts/fetchGraphQLSchema",
-    "codegen:watch": "npm run codegen -- --watch",
-    "prepare": "husky"
-  },
-  "lint-staged": {
-    "*.{js,css,md,ts,tsx}": "prettier --write"
+    "codegen:watch": "npm run codegen -- --watch"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.511.0",
     "@hookform/resolvers": "^3.3.4",
     "@paralleldrive/cuid2": "^2.2.2",
     "@parcel/watcher": "^2.4.0",
@@ -57,6 +52,7 @@
     "@urql/exchange-graphcache": "^6.4.1",
     "@urql/exchange-retry": "^1.2.1",
     "@urql/next": "^1.1.0",
+    "@vercel/blob": "^0.22.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
@@ -68,7 +64,6 @@
     "embla-carousel-react": "^8.0.0-rc21",
     "framer-motion": "^11.0.6",
     "graphql-codegen": "^0.4.0",
-    "husky": "^9.0.11",
     "i": "^0.3.7",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.314.0",
@@ -108,6 +103,7 @@
     "@types/jest": "^29.5.12",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
+    "@types/pg": "^8.15.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -115,21 +111,20 @@
     "concurrently": "^8.2.2",
     "cross-undici-fetch": "^0.4.10",
     "cypress": "^13.6.6",
-    "drizzle-kit": "^0.20.13",
+    "drizzle-kit": "^0.20.18",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "gradient-string": "^2.0.2",
     "graphql": "^16.8.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^15.2.0",
     "postcss": "^8",
     "prettier": "^3.2.4",
     "progress": "^2.0.3",
     "styled-jsx": "^5.1.2",
     "supabase": "^1.136.3",
     "tailwindcss": "^3.3.0",
-    "tsx": "^4.7.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.0.0"
   }
 }
