--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "graphql-codegen & next build",
+    "build:analyze": "ANALYZE=true npm run build",
     "start": "next start",
     "lint": "next lint --ignore-path .gitignore .",
     "test": "jest",
@@ -15,10 +16,12 @@
     "db:pull": "drizzle-kit introspect:pg --config=drizzle.config.ts",
     "db:studio": "npx drizzle-kit studio",
     "db:seed": "tsx -r dotenv/config ./src/lib/supabase/seed.ts",
+    "db:pull-products": "tsx -r dotenv/config ./src/lib/supabase/pullProducts.ts",
     "db:drop": "drizzle-kit drop --config=drizzle.config.ts",
     "codegen": "graphql-codegen",
     "codegen:fetch": "node --no-warnings scripts/fetchGraphQLSchema",
-    "codegen:watch": "npm run codegen -- --watch"
+    "codegen:watch": "npm run codegen -- --watch",
+    "lighthouse": "lighthouse https://your-site.vercel.app --view --preset=desktop"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
